--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "dependencies": {
         "@discord-player/extractor": "^4.5.1",
         "config": "^3.3.12",
-        "discord-player": "^6.7.1",
+        "discord-player": "^7.1.0",
         "discord-player-youtubei": "1.3.1",
         "discord.js": "^14.16.1",
         "dotenv": "^16.4.5",
@@ -39,7 +39,8 @@
         "mediaplex": "^0.0.9",
         "node-os-utils": "^1.3.7",
         "pino": "^9.4.0",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "youtubei.js": "^13.3.0"
     },
     "devDependencies": {
         "@types/config": "^3.3.4",
