--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     },
     "dependencies": {
         "@discord-player/extractor": "^4.5.1",
+        "bgutils-js": "^3.2.0",
         "config": "^3.3.12",
         "discord-player": "^7.1.0",
-        "discord-player-youtubei": "1.3.1",
+        "discord-player-youtubei": "1.4.3",
         "discord.js": "^14.16.1",
         "dotenv": "^16.4.5",
         "i18next": "^23.14.0",
